--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==2.0.1
-tensorflow>=2.12.0
-opencv-python>=4.7.0
-imutils>=0.5.4
-scikit-learn>=1.3.0
-h5py>=3.9.0
+Flask==2.2.2
+pandas==1.5.3
+numpy==1.22.4
+opencv-python==4.6.0.66
+tensorflow==2.10.0
+imutils==0.5.4
+h5py==3.8.0
 Werkzeug==2.0.3
 gunicorn
-pandas
